Fixed the home.html link to be home.php

--- a/web/assignments.html
+++ b/web/assignments.html
@@ -31,7 +31,7 @@ function checkTime(i) {
 </div>
 
 <ul>
-  <li><a  href="home.html">Home</a></li>
+  <li><a  href="home.php">Home</a></li>
   <li><a class="active" href="assignments.html">Assignments</a></li>
 </ul>
 <br /><br /><br />
