--- a/web/Final/AustDirectory/AJAXdebug.html
+++ b/web/Final/AustDirectory/AJAXdebug.html
@@ -17,6 +17,7 @@
 
     <!-- Core Style CSS -->
     <link rel="stylesheet" href="css/core-style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -24,7 +25,7 @@
 <body>
     <!-- ##### Header Area Start ##### -->
     <header class="header_area">
-        <div class="classy-nav-container breakpoint-off d-flex align-items-center justify-content-between">
+        <div class="classy-nav-container d-flex align-items-center justify-content-between">
             <!-- Classy Menu -->
             <nav class="classy-navbar" id="essenceNav">
                 <!-- Logo -->       
@@ -100,81 +101,81 @@
 
     <!-- ##### Welcome Area Start ##### -->
     <div id="mainView">
-<div class="container">    
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">Hipster Glasses 1</div>
-        <div class="panel-body"><img src="img/glasses1.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">$3 
-        <form action="browseItems.php" method="get">
-        <input type="submit" name="Item1" class="btn btn-danger" value="Add to Cart"/>       
-        </form>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-danger">
-        <div class="panel-heading">Hipster Glasses 2</div>
-        <div class="panel-body"><img src="img/glasses2.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">$5 
-        <form action="browseItems.php" method="get">
-        <input type="submit" name="Item2" class="btn btn-danger" value="Add to Cart"/>
-        </form>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-success">
-        <div class="panel-heading">Hipster Glasses 3</div>
-        <div class="panel-body"><img src="img/glasses3.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">$3 
-        <form action="browseItems.php" method="get">
-        <input type="submit" name="Item3" class="btn btn-danger" value="Add to Cart"/>
-        </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div><br>
+        <div class="container">    
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="panel panel-primary">
+                <div class="panel-heading">Hipster Glasses 1</div>
+                <div class="panel-body"><img src="img/glasses1.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
+                <div class="panel-footer">$3 
+                <form action="browseItems.php" method="get">
+                <input type="submit" name="Item1" class="btn btn-danger" value="Add to Cart"/>       
+                </form>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4"> 
+              <div class="panel panel-danger">
+                <div class="panel-heading">Hipster Glasses 2</div>
+                <div class="panel-body"><img src="img/glasses2.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
+                <div class="panel-footer">$5 
+                <form action="browseItems.php" method="get">
+                <input type="submit" name="Item2" class="btn btn-danger" value="Add to Cart"/>
+                </form>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4"> 
+              <div class="panel panel-success">
+                <div class="panel-heading">Hipster Glasses 3</div>
+                <div class="panel-body"><img src="img/glasses3.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
+                <div class="panel-footer">$3 
+                <form action="browseItems.php" method="get">
+                <input type="submit" name="Item3" class="btn btn-danger" value="Add to Cart"/>
+                </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div><br>
 
-<div class="container">    
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">Hipster Beanie 1</div>
-        <div class="panel-body"><img src="img/beanie1.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">$3 
-        <form action="browseItems.php" method="get">
-        <input type="submit" name="Item1" class="btn btn-danger" value="Add to Cart"/>       
-        </form>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-danger">
-        <div class="panel-heading">Hipster Beanie 2</div>
-        <div class="panel-body"><img src="img/beanie2.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">$5 
-        <form action="browseItems.php" method="get">
-        <input type="submit" name="Item2" class="btn btn-danger" value="Add to Cart"/>
-        </form>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-success">
-        <div class="panel-heading">Hipster Beanie 3</div>
-        <div class="panel-body"><img src="img/beanie3.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">$3 
-        <form action="browseItems.php" method="get">
-        <input type="submit" name="Item3" class="btn btn-danger" value="Add to Cart"/>
-        </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div><br>
+        <div class="container">    
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="panel panel-primary">
+                <div class="panel-heading">Hipster Beanie 1</div>
+                <div class="panel-body"><img src="img/beanie1.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
+                <div class="panel-footer">$3 
+                <form action="browseItems.php" method="get">
+                <input type="submit" name="Item1" class="btn btn-danger" value="Add to Cart"/>       
+                </form>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4"> 
+              <div class="panel panel-danger">
+                <div class="panel-heading">Hipster Beanie 2</div>
+                <div class="panel-body"><img src="img/beanie2.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
+                <div class="panel-footer">$5 
+                <form action="browseItems.php" method="get">
+                <input type="submit" name="Item2" class="btn btn-danger" value="Add to Cart"/>
+                </form>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4"> 
+              <div class="panel panel-success">
+                <div class="panel-heading">Hipster Beanie 3</div>
+                <div class="panel-body"><img src="img/beanie3.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
+                <div class="panel-footer">$3 
+                <form action="browseItems.php" method="get">
+                <input type="submit" name="Item3" class="btn btn-danger" value="Add to Cart"/>
+                </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div><br>
     </div>
     <!-- ##### Welcome Area End ##### -->
 
@@ -252,7 +253,6 @@
     <script src="js/hipster.js"></script>
     <!-- jQuery (Necessary for All JavaScript Plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    
     <!-- Popper js -->
     <script src="copiedJS/popper.min.js"></script>
     <!-- Bootstrap js -->
