--- a/web/Final/AustDirectory/index.html
+++ b/web/Final/AustDirectory/index.html
@@ -88,7 +88,7 @@
             
             </nav>
             <!-- Header Meta Data -->
-                        <div style="width: 100%;text-align: right;" class="header-meta d-flex clearfix justify-content-end">
+            <div style="width: 100%;text-align: right; position:fixed;" class="header-meta d-flex clearfix justify-content-end">
                     <a href="#" class="topbar-social-item fa fa-facebook"></a>
                     <a href="#" class="topbar-social-item fa fa-instagram"></a>
                     <a href="#" class="topbar-social-item fa fa-pinterest-p"></a>
