--- a/web/Final/AustDirectory/newItems.html
+++ b/web/Final/AustDirectory/newItems.html
@@ -72,4 +72,6 @@
       </div>
     </div>
   </div>
-</div><br>
+</div>
+<div style="text-algin:center;"> 
+<a href="#" onClick="loadCollection()" class="btn essence-btn">view collection</a></div>
