--- a/web/Final/AustDirectory/newItems.html
+++ b/web/Final/AustDirectory/newItems.html
@@ -73,5 +73,5 @@
     </div>
   </div>
 </div>
-<div style="text-algin:center;"> 
-<a href="#" onClick="loadCollection()" class="btn essence-btn">view collection</a></div>
+<div style="text-align:center;"> 
+<a href="#" onClick="loadCollection()" class="btn btn-primary">view collection</a></div>
