update css one more time

--- a/web/Final/AustDirectory/newItems.html
+++ b/web/Final/AustDirectory/newItems.html
@@ -74,4 +74,4 @@
   </div>
 </div>
 <div style="text-align:center;"> 
-<a href="#" onClick="loadMainScreen()" class="btn essence-btn">close collection</a></div>
+<a href="#" onClick="loadMainScreen()" class="btn essenceBack-btn">close collection</a></div>
